--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactjscourse",
+  "name": "project-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,5 +35,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "msw": "^0.27.2",
+    "prettier": "^2.2.1"
   }
 }
